# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  colab101.ipynb  hello_world.ipynb
connected-components/: CMakeLists.txt  main.cpp
eigen_matrix_shift/: CMakeLists.txt  main.cpp
ekf/: CMakeLists.txt  main.cpp
lisp/: tst.el
pcd-to-json/: 2018-06-11t18-43-00.103129_5b1ec2a17edaae001fcf96ba.slam  CMakeLists.txt  main.cpp  scale_upload.py  simulated_cloud.cpp  tile_to_json.cpp
point-stats/: CMakeLists.txt  main.cpp
systems/networking/: simple_server.c  utils.h
tensorflow_tutorials/: graph.py
tensorflow_tutorials/genadv_tutorial/: genadv.py
tensorflow_tutorials/imdb_text_classification/: text_classification.py
tensorflow_tutorials/mnist_fashion/: classification.py
tensorflow_tutorials/regression/: regression.py
tensorflow_tutorials/text_rnn/: text_rnn.py
vision/SfM/: CMakeLists.txt  camera_matrices.cpp  camera_matrices.h  common.cpp  common.h  main.cpp  optical_flow.cpp  optical_flow.h  reconstruction.cpp  reconstruction.h  rich_feature.cpp  rich_feature.h  triangulation.cpp  triangulation.h
vision/ceres-tutorials/: CMakeLists.txt  README.md  bundle-adjuster.cpp  curve-fitting.cpp  helloworld.cpp  random.h  robot-pose-mle.cpp
